🐛 Fixed spacing at the end of intro

--- a/public/assets/styles/intro.css
+++ b/public/assets/styles/intro.css
@@ -24,7 +24,7 @@
 }
 
 .spacing {
-  margin: 18%;
+  margin: 20%;
 }
 
 .ready {
